# kidshell

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  SECURITY.md  justfile  pyproject.toml
src/kidshell/: __init__.py  __main__.py
src/kidshell/cli/: config_command.py  main.py  rich_ui.py  sandbox.py
src/kidshell/core/: config.py  engine.py  i18n.py  profile.py  safe_math.py  session_store.py
src/kidshell/core/handlers/: __init__.py  base.py  colors.py  custom_data.py  emoji.py  gibberish.py  math.py  math_lookup.py  number_tree.py  quiz.py  repeated_chars.py  symbols.py
src/kidshell/core/services/: data_service.py  quiz_service.py
src/kidshell/frontends/terminal/: app.py
src/kidshell/frontends/textual_app/: app.py
tests/: __init__.py  scenario_dsl.py  test_engine_parity.py  test_engine_scenarios.py  test_engine_state_machine.py  test_interactive_cli.py  test_path_traversal_security.py  test_safe_math.py  test_safe_math_comprehensive.py  test_sandbox_comprehensive.py  test_session_store.py  test_textual_app_smoke.py
